[feat] 단어게임 게임 전체 조회 인증중앙화 연결